Fix issue with color picker wheel overlapping core settings
This commit fixes a layout issue with the color picker wheel where
when scrolling to the bottom the picker overlapped the core theme
settings text and checkboxes.

modified: css/dxpr-theme.admin.themesettings.css
modified: scss/dxpr-theme.admin.themesettings.scss

--- a/scss/dxpr-theme.admin.themesettings.scss
+++ b/scss/dxpr-theme.admin.themesettings.scss
@@ -369,7 +369,7 @@ $border-color: #222330;
     margin-top: 0;
   }
   .color-placeholder {
-    padding: 0 1.5rem;
+    padding: 0 1.5rem 100px;
     height: 0;
     top: 140px;
   }
